description fix on mobile devise

--- a/app/assets/stylesheets/_history_page.sass
+++ b/app/assets/stylesheets/_history_page.sass
@@ -271,6 +271,25 @@
             width: 175px
             margin-right: 0
 
+        .description
+          top: 160px
+
+          &.first
+            &:after, &:before
+              left: 30%
+
+          &.second
+            top: 250px
+
+            &:after, &:before
+              left: 30%
+
+          &.third
+            top: 340px
+
+            &:after, &:before
+              left: 30%
+
       &.fourth_item
         margin-top: 10px
 
