--- a/app/assets/stylesheets/content.sass
+++ b/app/assets/stylesheets/content.sass
@@ -675,6 +675,8 @@ $content_nav_padding: 12px
         width: 200px !important
 
   .content_nav
+    margin-bottom: 15px
+
     .navigation
       background-color: #fff
       border: 1px solid #ccc
